// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`data-object configs > dot_grid dots stable 1`] = `
[
  {
    "fill": "#FFFFFF",
    "listening": false,
    "radius": 2,
    "x": -16,
    "y": -16,
  },
  {
    "fill": "#FFFFFF",
    "listening": false,
    "radius": 2,
    "x": 0,
    "y": -16,
  },
  {
    "fill": "#FFFFFF",
    "listening": false,
    "radius": 2,
    "x": 16,
    "y": -16,
  },
  {
    "fill": "#FFFFFF",
    "listening": false,
    "radius": 2,
    "x": -16,
    "y": 0,
  },
  {
    "fill": "#FFFFFF",
    "listening": false,
    "radius": 2,
    "x": 0,
    "y": 0,
  },
  {
    "fill": "#FFFFFF",
    "listening": false,
    "radius": 2,
    "x": 16,
    "y": 0,
  },
  {
    "fill": "#FFFFFF",
    "listening": false,
    "radius": 2,
    "x": -16,
    "y": 16,
  },
  {
    "fill": "#FFFFFF",
    "listening": false,
    "radius": 2,
    "x": 0,
    "y": 16,
  },
  {
    "fill": "#FFFFFF",
    "listening": false,
    "radius": 2,
    "x": 16,
    "y": 16,
  },
]
`;

exports[`data-object configs > dot_grid hit cfg stable 1`] = `
{
  "fill": "rgba(0,0,0,0.01)",
  "height": 36,
  "listening": true,
  "width": 36,
  "x": -18,
  "y": -18,
}
`;

exports[`data-object configs > graph edges stable 1`] = `
[
  {
    "lineCap": "round",
    "listening": false,
    "points": [
      -16,
      0,
      16,
      0,
    ],
    "stroke": "#94a3b8",
    "strokeWidth": 1.5,
  },
]
`;

exports[`data-object configs > graph hit cfg stable 1`] = `
{
  "cornerRadius": 4,
  "dash": [
    6,
    4,
  ],
  "fill": "rgba(76,238,249,0.04)",
  "height": 80,
  "listening": true,
  "stroke": "#4CEEF9",
  "strokeWidth": 1,
  "width": 80,
  "x": -40,
  "y": -40,
}
`;

exports[`data-object configs > graph labels stable 1`] = `
[
  {
    "align": "center",
    "fill": "#4ceef9",
    "fontSize": 10,
    "listening": false,
    "text": "A",
    "width": 24,
    "x": -28,
    "y": -13.2,
  },
  {
    "align": "center",
    "fill": "#4ceef9",
    "fontSize": 10,
    "listening": false,
    "text": "B",
    "width": 24,
    "x": 4,
    "y": -13.2,
  },
]
`;

exports[`data-object configs > graph vertices stable 1`] = `
[
  {
    "fill": "#4ceef9",
    "listening": false,
    "radius": 3.2,
    "stroke": "#94a3b8",
    "strokeWidth": 1,
    "x": -16,
    "y": 0,
  },
  {
    "fill": "#4ceef9",
    "listening": false,
    "radius": 3.2,
    "stroke": "#94a3b8",
    "strokeWidth": 1,
    "x": 16,
    "y": 0,
  },
]
`;

exports[`data-object configs > group cfg stable 1`] = `
{
  "draggable": true,
  "id": "grp1",
  "name": "stageObject",
  "opacity": 1,
  "rotation": 0,
  "scaleX": 1,
  "scaleY": 1,
  "x": 484,
  "y": 266,
}
`;

exports[`data-object configs > matrix brackets stable 1`] = `
[
  {
    "listening": false,
    "points": [
      -21.76,
      -22.08,
      -25.6,
      -22.08,
      -25.6,
      22.08,
      -21.76,
      22.08,
    ],
    "stroke": "#FFFFFF",
    "strokeWidth": 2,
  },
  {
    "listening": false,
    "points": [
      21.76,
      -22.08,
      25.6,
      -22.08,
      25.6,
      22.08,
      21.76,
      22.08,
    ],
    "stroke": "#FFFFFF",
    "strokeWidth": 2,
  },
]
`;

exports[`data-object configs > matrix cells stable 1`] = `
[
  {
    "align": "center",
    "fill": "#FFFFFF",
    "fontSize": 10,
    "listening": false,
    "text": "1",
    "width": 32,
    "x": -36.480000000000004,
    "y": -26.240000000000002,
  },
  {
    "align": "center",
    "fill": "#FFFFFF",
    "fontSize": 10,
    "listening": false,
    "text": "2",
    "width": 32,
    "x": 4.48,
    "y": -26.240000000000002,
  },
  {
    "align": "center",
    "fill": "#FFFFFF",
    "fontSize": 10,
    "listening": false,
    "text": "3",
    "width": 32,
    "x": -36.480000000000004,
    "y": 10.240000000000002,
  },
  {
    "align": "center",
    "fill": "#FFFFFF",
    "fontSize": 10,
    "listening": false,
    "text": "4",
    "width": 32,
    "x": 4.48,
    "y": 10.240000000000002,
  },
]
`;

exports[`data-object configs > matrix hit cfg stable 1`] = `
{
  "cornerRadius": 4,
  "dash": [
    6,
    4,
  ],
  "fill": "rgba(76,238,249,0.04)",
  "height": 48,
  "listening": true,
  "stroke": "#4CEEF9",
  "strokeWidth": 1,
  "width": 64,
  "x": -32,
  "y": -24,
}
`;

exports[`data-object configs > polar circles stable 1`] = `
[
  {
    "fill": "transparent",
    "listening": false,
    "opacity": 0.6,
    "radius": 20,
    "stroke": "#64748b",
    "strokeWidth": 0.5,
    "x": 0,
    "y": 0,
  },
  {
    "fill": "transparent",
    "listening": false,
    "opacity": 0.6,
    "radius": 40,
    "stroke": "#64748b",
    "strokeWidth": 0.5,
    "x": 0,
    "y": 0,
  },
  {
    "fill": "transparent",
    "listening": false,
    "opacity": 0.6,
    "radius": 60,
    "stroke": "#64748b",
    "strokeWidth": 0.5,
    "x": 0,
    "y": 0,
  },
  {
    "fill": "transparent",
    "listening": false,
    "opacity": 0.6,
    "radius": 80,
    "stroke": "#64748b",
    "strokeWidth": 0.5,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`data-object configs > polar spokes stable 1`] = `
[
  {
    "listening": false,
    "opacity": 0.6,
    "points": [
      0,
      0,
      80,
      0,
    ],
    "stroke": "#64748b",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.6,
    "points": [
      0,
      0,
      69.2820323027551,
      39.99999999999999,
    ],
    "stroke": "#64748b",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.6,
    "points": [
      0,
      0,
      40.00000000000001,
      69.28203230275508,
    ],
    "stroke": "#64748b",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.6,
    "points": [
      0,
      0,
      4.898587196589413e-15,
      80,
    ],
    "stroke": "#64748b",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.6,
    "points": [
      0,
      0,
      -39.999999999999986,
      69.2820323027551,
    ],
    "stroke": "#64748b",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.6,
    "points": [
      0,
      0,
      -69.2820323027551,
      39.99999999999999,
    ],
    "stroke": "#64748b",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.6,
    "points": [
      0,
      0,
      -80,
      9.797174393178826e-15,
    ],
    "stroke": "#64748b",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.6,
    "points": [
      0,
      0,
      -69.28203230275508,
      -40.00000000000001,
    ],
    "stroke": "#64748b",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.6,
    "points": [
      0,
      0,
      -40.000000000000036,
      -69.28203230275508,
    ],
    "stroke": "#64748b",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.6,
    "points": [
      0,
      0,
      -1.4695761589768237e-14,
      -80,
    ],
    "stroke": "#64748b",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.6,
    "points": [
      0,
      0,
      40.00000000000001,
      -69.28203230275508,
    ],
    "stroke": "#64748b",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.6,
    "points": [
      0,
      0,
      69.28203230275507,
      -40.000000000000036,
    ],
    "stroke": "#64748b",
    "strokeWidth": 0.5,
  },
]
`;

exports[`data-object configs > table cells stable 1`] = `
[
  {
    "align": "center",
    "fill": "#FFFFFF",
    "fontSize": 9,
    "height": 28,
    "listening": false,
    "text": "a",
    "verticalAlign": "middle",
    "width": 40,
    "x": -40,
    "y": -28,
  },
  {
    "align": "center",
    "fill": "#FFFFFF",
    "fontSize": 9,
    "height": 28,
    "listening": false,
    "text": "b",
    "verticalAlign": "middle",
    "width": 40,
    "x": 0,
    "y": -28,
  },
  {
    "align": "center",
    "fill": "#FFFFFF",
    "fontSize": 9,
    "height": 28,
    "listening": false,
    "text": "c",
    "verticalAlign": "middle",
    "width": 40,
    "x": -40,
    "y": 0,
  },
  {
    "align": "center",
    "fill": "#FFFFFF",
    "fontSize": 9,
    "height": 28,
    "listening": false,
    "text": "d",
    "verticalAlign": "middle",
    "width": 40,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`data-object configs > table grid lines stable 1`] = `
[
  {
    "listening": false,
    "opacity": 0.4,
    "points": [
      -40,
      -28,
      40,
      -28,
    ],
    "stroke": "#FFFFFF",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.4,
    "points": [
      -40,
      0,
      40,
      0,
    ],
    "stroke": "#FFFFFF",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.4,
    "points": [
      -40,
      28,
      40,
      28,
    ],
    "stroke": "#FFFFFF",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.4,
    "points": [
      -40,
      -28,
      -40,
      28,
    ],
    "stroke": "#FFFFFF",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.4,
    "points": [
      0,
      -28,
      0,
      28,
    ],
    "stroke": "#FFFFFF",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.4,
    "points": [
      40,
      -28,
      40,
      28,
    ],
    "stroke": "#FFFFFF",
    "strokeWidth": 0.5,
  },
]
`;

exports[`data-object configs > table hit cfg stable 1`] = `
{
  "cornerRadius": 4,
  "dash": [
    6,
    4,
  ],
  "fill": "rgba(76,238,249,0.04)",
  "height": 56,
  "listening": true,
  "stroke": "#4CEEF9",
  "strokeWidth": 1,
  "width": 80,
  "x": -40,
  "y": -28,
}
`;

exports[`data-object configs > vector field arrows stable 1`] = `
[
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -98.89829784152248,
      -60.84744676228372,
      -111.10170215847752,
      -79.15255323771628,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -100.27073061568417,
      -40.06853429293677,
      -109.72926938431583,
      -59.93146570706323,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -101.97806759312884,
      -19.423236575950945,
      -108.02193240687116,
      -40.576763424049055,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -103.95709998109206,
      0.9504501985334723,
      -106.04290001890794,
      -20.950450198533474,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -106.04290001890794,
      20.950450198533474,
      -103.95709998109206,
      -0.9504501985334723,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -108.02193240687116,
      40.576763424049055,
      -101.97806759312884,
      19.423236575950945,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -109.72926938431583,
      59.93146570706323,
      -100.27073061568417,
      40.06853429293677,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -111.10170215847752,
      79.15255323771628,
      -98.89829784152248,
      60.84744676228372,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -67.49449924603988,
      -61.95839204932844,
      -82.50550075396012,
      -78.04160795067156,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -68.89829784152248,
      -40.84744676228372,
      -81.10170215847752,
      -59.15255323771628,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -70.91470256010486,
      -19.786756400262146,
      -79.08529743989514,
      -40.21324359973785,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -73.5461990789988,
      0.9035069075089819,
      -76.4538009210012,
      -20.903506907508984,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -76.4538009210012,
      20.903506907508984,
      -73.5461990789988,
      -0.9035069075089819,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -79.08529743989514,
      40.21324359973785,
      -70.91470256010486,
      19.786756400262146,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -81.10170215847752,
      59.15255323771628,
      -68.89829784152248,
      40.84744676228372,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -82.50550075396012,
      78.04160795067156,
      -67.49449924603988,
      61.95839204932844,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -35.74703677085791,
      -64.05166649555152,
      -54.25296322914209,
      -75.94833350444848,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -36.82376439128117,
      -42.64138795215305,
      -53.17623560871883,
      -57.35861204784695,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -38.89829784152248,
      -20.84744676228372,
      -51.10170215847752,
      -39.152553237716276,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -42.61376496399478,
      0.7380576620234809,
      -47.38623503600522,
      -20.73805766202348,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -47.38623503600522,
      20.73805766202348,
      -42.61376496399478,
      -0.7380576620234809,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -51.10170215847752,
      39.152553237716276,
      -38.89829784152248,
      20.84744676228372,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -53.17623560871883,
      57.35861204784695,
      -36.82376439128117,
      42.64138795215305,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -54.25296322914209,
      75.94833350444848,
      -35.74703677085791,
      64.05166649555152,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -4.244173445148496,
      -67.69518002396039,
      -25.755826554851502,
      -72.30481997603961,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -4.463910862567335,
      -46.8391732587702,
      -25.536089137432665,
      -53.1608267412298,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -5.161300899000926,
      -25.080650449500464,
      -24.838699100999072,
      -34.91934955049954,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -8.89829784152248,
      -0.8474467622837185,
      -21.101702158477522,
      -19.152553237716283,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -21.101702158477522,
      19.152553237716283,
      -8.89829784152248,
      0.8474467622837185,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -24.838699100999072,
      34.91934955049954,
      -5.161300899000926,
      25.080650449500464,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -25.536089137432665,
      53.1608267412298,
      -4.463910862567335,
      46.8391732587702,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -25.755826554851502,
      72.30481997603961,
      -4.244173445148496,
      67.69518002396039,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      25.755826554851502,
      -72.30481997603961,
      4.244173445148496,
      -67.69518002396039,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      25.536089137432665,
      -53.1608267412298,
      4.463910862567335,
      -46.8391732587702,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      24.838699100999072,
      -34.91934955049954,
      5.161300899000926,
      -25.080650449500464,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      21.101702158477522,
      -19.152553237716283,
      8.89829784152248,
      -0.8474467622837185,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      8.89829784152248,
      0.8474467622837185,
      21.101702158477522,
      19.152553237716283,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      5.161300899000926,
      25.080650449500464,
      24.838699100999072,
      34.91934955049954,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      4.463910862567335,
      46.8391732587702,
      25.536089137432665,
      53.1608267412298,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      4.244173445148496,
      67.69518002396039,
      25.755826554851502,
      72.30481997603961,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      54.25296322914209,
      -75.94833350444848,
      35.74703677085791,
      -64.05166649555152,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      53.17623560871883,
      -57.35861204784695,
      36.82376439128117,
      -42.64138795215305,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      51.10170215847752,
      -39.152553237716276,
      38.89829784152248,
      -20.84744676228372,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      47.38623503600522,
      -20.73805766202348,
      42.61376496399478,
      0.7380576620234809,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      42.61376496399478,
      -0.7380576620234809,
      47.38623503600522,
      20.73805766202348,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      38.89829784152248,
      20.84744676228372,
      51.10170215847752,
      39.152553237716276,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      36.82376439128117,
      42.64138795215305,
      53.17623560871883,
      57.35861204784695,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      35.74703677085791,
      64.05166649555152,
      54.25296322914209,
      75.94833350444848,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      82.50550075396012,
      -78.04160795067156,
      67.49449924603988,
      -61.95839204932844,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      81.10170215847752,
      -59.15255323771628,
      68.89829784152248,
      -40.84744676228372,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      79.08529743989514,
      -40.21324359973785,
      70.91470256010486,
      -19.786756400262146,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      76.4538009210012,
      -20.903506907508984,
      73.5461990789988,
      0.9035069075089819,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      73.5461990789988,
      -0.9035069075089819,
      76.4538009210012,
      20.903506907508984,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      70.91470256010486,
      19.786756400262146,
      79.08529743989514,
      40.21324359973785,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      68.89829784152248,
      40.84744676228372,
      81.10170215847752,
      59.15255323771628,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      67.49449924603988,
      61.95839204932844,
      82.50550075396012,
      78.04160795067156,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      111.10170215847752,
      -79.15255323771628,
      98.89829784152248,
      -60.84744676228372,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      109.72926938431583,
      -59.93146570706323,
      100.27073061568417,
      -40.06853429293677,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      108.02193240687116,
      -40.576763424049055,
      101.97806759312884,
      -19.423236575950945,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      106.04290001890794,
      -20.950450198533474,
      103.95709998109206,
      0.9504501985334723,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      103.95709998109206,
      -0.9504501985334723,
      106.04290001890794,
      20.950450198533474,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      101.97806759312884,
      19.423236575950945,
      108.02193240687116,
      40.576763424049055,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      100.27073061568417,
      40.06853429293677,
      109.72926938431583,
      59.93146570706323,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      98.89829784152248,
      60.84744676228372,
      111.10170215847752,
      79.15255323771628,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
]
`;

exports[`data-object configs > vector field hit cfg stable 1`] = `
{
  "cornerRadius": 4,
  "dash": [
    6,
    4,
  ],
  "fill": "rgba(56,189,248,0.04)",
  "height": 160,
  "listening": true,
  "stroke": "#4CEEF9",
  "strokeWidth": 1,
  "width": 240,
  "x": -120,
  "y": -80,
}
`;

exports[`shapes2d > annulus config is stable 1`] = `
{
  "draggable": true,
  "fill": "#6366F1",
  "hitStrokeWidth": 10,
  "id": "ann1",
  "innerRadius": 14,
  "name": "stageObject",
  "opacity": 1,
  "outerRadius": 28,
  "rotation": 0,
  "stroke": "#FFFFFF",
  "strokeWidth": 0.4,
  "x": 484,
  "y": 266,
}
`;

exports[`shapes2d > arc config is stable 1`] = `
{
  "draggable": true,
  "hitStrokeWidth": 12,
  "id": "arc1",
  "name": "stageObject",
  "opacity": 1,
  "sceneFunc": [Function],
  "stroke": "#F97316",
  "strokeWidth": 0.8,
  "x": 484,
  "y": 266,
}
`;

exports[`shapes2d > arrow config is stable 1`] = `
{
  "draggable": true,
  "fill": "#EF4444",
  "hitStrokeWidth": 16,
  "id": "arr1",
  "name": "stageObject",
  "opacity": 1,
  "pointerLength": 2.8000000000000003,
  "pointerWidth": 2.4000000000000004,
  "points": [
    -56,
    0,
    56,
    0,
  ],
  "rotation": 0,
  "scaleX": 1,
  "scaleY": 1,
  "stroke": "#EF4444",
  "strokeWidth": 2,
  "x": 484,
  "y": 266,
}
`;

exports[`shapes2d > circle config is stable 1`] = `
{
  "draggable": true,
  "fill": "#3B82F6",
  "hitStrokeWidth": 10,
  "id": "circ1",
  "name": "stageObject",
  "opacity": 1,
  "radius": 32,
  "rotation": 0,
  "scaleX": 1,
  "scaleY": 1,
  "stroke": "#FFFFFF",
  "strokeWidth": 0.4,
  "x": 484,
  "y": 266,
}
`;

exports[`shapes2d > dot config is stable 1`] = `
{
  "draggable": true,
  "fill": "#F59E0B",
  "hitStrokeWidth": 12,
  "id": "dot1",
  "name": "stageObject",
  "opacity": 1,
  "radius": 8,
  "x": 300,
  "y": 170,
}
`;

exports[`shapes2d > double_arrow config is stable 1`] = `
{
  "draggable": true,
  "fill": "#EF4444",
  "hitStrokeWidth": 12,
  "id": "da1",
  "name": "stageObject",
  "opacity": 1,
  "pointerAtBeginning": true,
  "pointerAtEnding": true,
  "pointerLength": 2.8000000000000003,
  "pointerWidth": 2.4000000000000004,
  "points": [
    -60,
    0,
    60,
    0,
  ],
  "rotation": 0,
  "stroke": "#EF4444",
  "strokeWidth": 2.4,
  "x": 484,
  "y": 266,
}
`;

exports[`shapes2d > ellipse config is stable 1`] = `
{
  "draggable": true,
  "fill": "#8B5CF6",
  "hitStrokeWidth": 10,
  "id": "ell1",
  "name": "stageObject",
  "opacity": 1,
  "radiusX": 40,
  "radiusY": 24,
  "rotation": 15,
  "scaleX": 1,
  "scaleY": 1,
  "stroke": "#FFFFFF",
  "strokeWidth": 0.4,
  "x": 380,
  "y": 210,
}
`;

exports[`shapes2d > heart config is stable 1`] = `
{
  "draggable": true,
  "fill": "#EF4444",
  "hitStrokeWidth": 10,
  "id": "hrt1",
  "name": "stageObject",
  "opacity": 1,
  "rotation": 0,
  "scaleX": 1,
  "scaleY": 1,
  "sceneFunc": [Function],
  "stroke": "#FFFFFF",
  "strokeWidth": 0.4,
  "x": 420,
  "y": 250,
}
`;

exports[`shapes2d > line config is stable 1`] = `
{
  "draggable": true,
  "hitStrokeWidth": 16,
  "id": "line1",
  "lineCap": "round",
  "name": "stageObject",
  "opacity": 1,
  "points": [
    -60,
    0,
    60,
    0,
  ],
  "rotation": 0,
  "stroke": "#94A3B8",
  "strokeWidth": 2,
  "x": 484,
  "y": 266,
}
`;

exports[`shapes2d > parametric config is stable 1`] = `
{
  "draggable": true,
  "hitStrokeWidth": 12,
  "id": "par1",
  "lineCap": "round",
  "name": "stageObject",
  "opacity": 1,
  "points": [],
  "rotation": 0,
  "stroke": "#10B981",
  "strokeWidth": 0.8,
  "tension": 0.3,
  "x": 484,
  "y": 266,
}
`;

exports[`shapes2d > polygon config is stable 1`] = `
{
  "draggable": true,
  "fill": "#06B6D4",
  "hitStrokeWidth": 10,
  "id": "poly1",
  "name": "stageObject",
  "opacity": 1,
  "radius": 36,
  "rotation": 0,
  "scaleX": 1,
  "scaleY": 1,
  "sides": 6,
  "stroke": "#FFFFFF",
  "strokeWidth": 0.4,
  "x": 484,
  "y": 266,
}
`;

exports[`shapes2d > polygon_free config is stable 1`] = `
{
  "closed": true,
  "draggable": true,
  "fill": "#84CC16",
  "hitStrokeWidth": 10,
  "id": "pf1",
  "name": "stageObject",
  "opacity": 1,
  "points": [
    -16,
    16,
    16,
    16,
    0,
    -20,
  ],
  "rotation": 0,
  "scaleX": 1,
  "scaleY": 1,
  "stroke": "#FFFFFF",
  "strokeWidth": 0.4,
  "x": 484,
  "y": 266,
}
`;

exports[`shapes2d > rectangle config is stable 1`] = `
{
  "cornerRadius": 6.4,
  "draggable": true,
  "fill": "#3B82F6",
  "height": 48,
  "hitStrokeWidth": 10,
  "id": "rect1",
  "name": "stageObject",
  "opacity": 1,
  "rotation": 0,
  "scaleX": 1,
  "scaleY": 1,
  "stroke": "#FFFFFF",
  "strokeWidth": 0.4,
  "width": 80,
  "x": 444,
  "y": 242,
}
`;

exports[`shapes2d > sector config is stable 1`] = `
{
  "angle": 120,
  "draggable": true,
  "fill": "#EC4899",
  "hitStrokeWidth": 10,
  "id": "sec1",
  "name": "stageObject",
  "opacity": 1,
  "radius": 28,
  "rotation": 0,
  "stroke": "#FFFFFF",
  "strokeWidth": 0.4,
  "x": 484,
  "y": 266,
}
`;

exports[`shapes2d > square config is stable 1`] = `
{
  "cornerRadius": 8,
  "draggable": true,
  "fill": "#10B981",
  "height": 60,
  "hitStrokeWidth": 10,
  "id": "sq1",
  "name": "stageObject",
  "opacity": 1,
  "rotation": 0,
  "scaleX": 1,
  "scaleY": 1,
  "stroke": "#FFFFFF",
  "strokeWidth": 0.4,
  "width": 60,
  "x": 230,
  "y": 140,
}
`;

exports[`shapes2d > star config is stable 1`] = `
{
  "draggable": true,
  "fill": "#FBBF24",
  "hitStrokeWidth": 10,
  "id": "star1",
  "innerRadius": 12.8,
  "name": "stageObject",
  "numPoints": 5,
  "opacity": 1,
  "outerRadius": 32,
  "rotation": 0,
  "scaleX": 1,
  "scaleY": 1,
  "stroke": "#FFFFFF",
  "strokeWidth": 0.4,
  "x": 484,
  "y": 210,
}
`;

exports[`shapes2d > triangle config is stable 1`] = `
{
  "closed": true,
  "draggable": true,
  "fill": "#F97316",
  "hitStrokeWidth": 10,
  "id": "tri1",
  "name": "stageObject",
  "opacity": 1,
  "points": [
    0,
    -28,
    32,
    28,
    -32,
    28,
  ],
  "rotation": 0,
  "scaleX": 1,
  "scaleY": 1,
  "stroke": "#FFFFFF",
  "strokeWidth": 0.4,
  "x": 340,
  "y": 210,
}
`;

exports[`text configs > counter config is stable 1`] = `
{
  "draggable": true,
  "fill": "#10B981",
  "fontFamily": "Arial",
  "fontSize": 32,
  "fontStyle": "",
  "hitStrokeWidth": 10,
  "id": "cnt1",
  "name": "stageObject",
  "offsetX": 0,
  "offsetY": 16,
  "opacity": 1,
  "rotation": 0,
  "text": "42.0%",
  "x": 484,
  "y": 266,
}
`;

exports[`text configs > latex bg config is stable 1`] = `
{
  "cornerRadius": 6,
  "dash": [
    6,
    4,
  ],
  "fill": "rgba(76,238,249,0.06)",
  "height": 32,
  "listening": true,
  "stroke": "#4CEEF9",
  "strokeWidth": 1.5,
  "width": 120,
  "x": -60,
  "y": -16,
}
`;

exports[`text configs > latex text config is stable 1`] = `
{
  "align": "center",
  "fill": "#FFFFFF",
  "fontFamily": "serif",
  "fontSize": 12,
  "fontStyle": "italic",
  "height": 32,
  "listening": false,
  "padding": 8,
  "text": "E = mc²",
  "verticalAlign": "middle",
  "width": 120,
  "x": -60,
  "y": -16,
}
`;

exports[`text configs > text config is stable 1`] = `
{
  "draggable": true,
  "fill": "#FFFFFF",
  "fontFamily": "Roboto",
  "fontSize": 19.200000000000003,
  "fontStyle": "",
  "hitStrokeWidth": 10,
  "id": "txt1",
  "name": "stageObject",
  "offsetX": 0,
  "offsetY": 9.600000000000001,
  "opacity": 1,
  "rotation": 0,
  "text": "Hello",
  "x": 484,
  "y": 170,
}
`;
